# FinGraph

./: .env.example  .gitignore  Makefile  PRD.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: README.md
docs/: autograph.md  data_inventory.md  data_sources.md
docs/operations/: agents.md  data_pipeline.md  docker_setup.md  migrations.md  rag_tools.md
eval/adapters/: base.py  graph_adapter.py  hybrid_adapter.py  sql_vec_adapter.py  vector_adapter.py
eval/metrics/: __init__.py  _format.py  bom_coverage.py  bridge_quality.py  confidence_weighted.py  core_diff.py  data_coverage.py  edge_meta_completeness.py  latency.py  llm_judge.py  main_hop_efficiency.py  prd_dashboard.py
eval/qa_gold/: README.md  gold_qa_auto_v0.jsonl  gold_qa_cross_v0.jsonl  gold_qa_v0.jsonl
eval/runners/: run_qa_eval.py
ontology/: entities.yaml  extractors.yaml  relations.yaml
ontology/auto/: README.md  entities.yaml  extractors.yaml  manufactured_at_seed.yaml  plants.yaml  relations.yaml  standards.yaml  supplier_seed.yaml  system_taxonomy.yaml
scripts/: data_inventory.py  healthcheck.py  migrate_neo4j_schema.py  query_demo.py  serve_embeddings.py  validate_cross_source.py
scripts/audit/: bom_coverage.py  dod_audit.py  edge_meta_invariants.py  validate_gold_qa.py
scripts/ingest/: build_targets.py  bulk_dart.py  bulk_dart_structural.py  (+17 more)
tests/: conftest.py  test_autograph_routing.py  test_checkpointer.py  test_cost_approval.py  test_cost_estimator.py  test_cypher_templates.py  test_dag.py  test_embeddings.py  test_eval_metrics_extension.py  test_executor_fallback.py  test_graph_smoke.py  test_ingestion.py  test_interrupts.py  test_llm_adapter.py  test_loaders.py  test_normalize_corp_name.py  test_number_guard.py  test_planner_dag.py  test_rewriter.py  test_safety.py  test_session.py  test_stream.py  test_supervisor.py  test_temporal.py  test_tools_financials.py  test_tracing.py  test_tracing_and_budget_per_domain.py  test_triage_interrupt.py  test_validator.py  test_workers.py
(+207 files in other folders)
